kubernetes/apps/actions-runner-system/actions-runner-controller/runners/schemas/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.brauni.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: schemas-runner
spec:
  endpointSelector:
    matchLabels:
      actions.github.com/scale-set-name: schemas-runner
      app.kubernetes.io/component: runner
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
    - toEntities:
        - world
  egressDeny:
    - toEntities:
        - host
        - remote-node
